<resources>
  <string name="app_name">wteplota</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">WTeplota</string>
  <string name="nav_header_subtitle">Your own IoT stuff</string>
  <string name="nav_header_desc">Yo! iot!</string>
  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>

  <string name="menu_home">Home</string>
  <string name="menu_house">House</string>
  <string name="menu_start">Starting point</string>
  <string name="menu_about">About</string>
  <string name="menu_slideshow">nic</string>
  <string name="settings_url">Server URL http://x.org</string>
  <string name="url">Server url</string>
  <string name="menu_pref">Preferences</string>
  <string name="menu_login">Login</string>

  <string name="app_name_short">wteplota</string>
  <string name="auth_granted">Authorization granted</string>
  <string name="intro_header">OpenID AppAuth Demo</string>
  <string name="openid_logo_content_description">AppAuth Logo</string>
  <string name="refresh_token">Refresh token</string>
  <string name="access_token_expires_at">Access token expires at: %s</string>
  <string name="no_access_token_returned">No access token returned</string>
  <string name="no_refresh_token_returned">No refresh token returned</string>
  <string name="refresh_token_returned">Refresh token returned</string>
  <string name="no_id_token_returned">No ID token returned</string>
  <string name="id_token_returned">ID token returned</string>
  <string name="view_profile">View user info</string>
  <string name="userinfo_profile_content_description">User profile picture</string>
  <string name="login_hint_value">Account ID (e.g. test@example.com)</string>
  <string name="account_id_description">The Account ID is optional. If specified, it is transmitted as a login_hint parameter in the authorization request.</string>
  <string name="auth_options">Authorization options:</string>
  <string name="browser_selector_label">Use browser:</string>
  <string name="browser_icon_contentDescription">Browser app icon</string>
  <string name="browser_appauth_default_label">AppAuth heuristic selection</string>
  <string name="custom_tab_label">"%1$s (custom tab)"</string>
  <string name="retry_label">Retry</string>
  <string name="not_authorized">Not authorized</string>
  <string name="start_authorization">Start authorization</string>
  <string name="reauthorize">Reauthorize</string>
  <string name="sign_out">Sign out</string>
  <string name="no_access_token_expiry">Access time has no defined expiry</string>
  <string name="access_token_expired">Access token has expired</string>
  <string name="auth_settings">Authorization settings in use:</string>
  <string name="use_pending_intents">Use PendingIntent\'s for completion</string>
  <string name="action_login">Login</string>
  <string name="tap_on_room">tap on room</string>
  <string name="settings_api_type">api type</string>
  <string name="api_type">api</string>
  <string name="select_api_type">select api type</string>
  <string name="select_api_type_summary">select api vendor and type</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="menu_sms">SMS</string>
  <string name="sms_send">Send SMS</string>
  <string name="sms_intro">SMS stuff</string>
  <string name="settings_login">login name</string>
  <string name="settings_password">password</string>
  <string name="title_login">login</string>
  <string name="title_password">password</string>
  <string name="username_label">Username:</string>
  <string name="nextcloud">Login via Nextcloud</string>
  <string name="title_activity_wt_deviceform">Device Form</string>
  <string name="update_device_parameters">Submit and Update device parameters</string>
  <string name="not_logged_in">Not logged in</string>
  <string name="back">Back</string>
  <string name="enter_your_pin">Enter your PIN</string>
  <string name="about_text">ABOUT</string>
  <string name="login_github">Login via Github</string>

</resources>
