<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group
    android:id="@+id/group_nav"
    android:checkableBehavior="single">
    <item
      android:id="@+id/nav_start"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_start" />
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_house"
      android:title="@string/menu_house" />
  </group>


  <group
    android:id="@+id/group_action"
    android:checkableBehavior="single">
    <item
      android:id="@+id/nav_login"
      android:icon="@drawable/baseline_login_24"
      android:title="@string/menu_login" />
    <item
      android:id="@+id/nav_sms"
      android:icon="@drawable/baseline_sms_24"
      android:title="@string/menu_sms" />
    <item
      android:id="@+id/nav_about"
      android:icon="@drawable/baseline_info_24"
      android:title="@string/menu_about" />
    <item
      android:id="@+id/nav_prefs"
      android:icon="@drawable/ic_menu_manage"
      android:title="test" />
    <item
      android:id="@+id/nav_preferences"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/menu_pref" />

  </group>

</menu>