<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_start">

  <fragment
    android:id="@+id/nav_home"
    android:name="org.walley.wteplota.wt_f_devices"
    android:label="@string/menu_house"
    tools:layout="@layout/fragment_devices" />

  <fragment
    android:id="@+id/nav_start"
    android:name="org.walley.wteplota.wt_f_start"
    android:label="@string/menu_start"
    tools:layout="@layout/fragment_start" />

  <fragment
    android:id="@+id/nav_about"
    android:name="org.walley.wteplota.wt_f_about"
    android:label="@string/menu_about"
    tools:layout="@layout/fragment_about" />

  <fragment
    android:id="@+id/nav_login"
    android:name="org.walley.wteplota.wt_login"
    android:label="@string/menu_about"
    tools:layout="@layout/fragment_about" />

  <fragment
    android:id="@+id/nav_prefs"
    android:name="org.walley.wteplota.wt_f_prefs"
    android:label="@string/menu_pref"
    tools:layout="@layout/fragment_prefs" />

</navigation>
