<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".wt_f_login">

  <LinearLayout
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/tv_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textSize="24sp" />

      <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="username unknown"
        android:textSize="24sp" />
    </LinearLayout>

    <Button
      android:id="@+id/button_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Button yoyo login"
      tools:ignore="MissingConstraints" />

    <Button
      android:id="@+id/button2_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Buttonz yoyo login"
      tools:ignore="MissingConstraints" />

    <Button
      android:id="@+id/button_nextcloud"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/nextcloud" />

    <Button
      android:id="@+id/button_github"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login_github" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
